<resources>
    <string name="app_name">GitSpark</string>
    <string name="username_prompt">Enter username</string>
    <string name="password_prompt">Enter password</string>
    <string name="log_in_button_text">Log In</string>
    <string name="not_now_button_text">Not Now</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_search">Search</string>
    <string name="nav_pr">Pull Requests</string>
    <string name="nav_issues">Issues</string>
    <string name="overview_title">Overview</string>
    <string name="profile_feed_title">Activity</string>
    <string name="code_title">Code</string>
    <string name="repos_title">Repos</string>
    <string name="stars_title">Stars</string>
    <string name="following_text">Following (%1$s)</string>
    <string name="followers_text">Followers (%1$s)</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="edit_issue_button">Edit Issue</string>
    <string name="edit_pr_button">Edit Pull Request</string>
    <string name="create_issue_button">Create Issue</string>
    <string name="total_contribution_single">1 contribution in the past year</string>
    <string name="total_contribution">%1$s contributions in the past year</string>
    <string name="joined_date">Joined GitHub on %1$s</string>
    <string name="updated_repo">Updated %1$s</string>
    <string name="private_label">private</string>
    <string name="forked_label">forked</string>
    <string name="archived_label">archived</string>
    <string name="followers_button_text">Followers</string>
    <string name="following_button_text">Following</string>
    <string name="follow_button_text">Follow</string>
    <string name="unfollow_button_text">Unfollow</string>
    <string name="num_repos_text">%1$s (%2$s)</string>
    <string name="user_profile_title">Profile (%1$s)</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="issues_title">Issues</string>
    <string name="name_label">Name</string>
    <string name="title_label">Title</string>
    <string name="name_disclaimer">A name displayed alongside your username (usually your full name). You may remove it at any time.</string>
    <string name="bio_label">Bio</string>
    <string name="desc_label">Description</string>
    <string name="email_label">Public email</string>
    <string name="email_disclaimer">If your email is set to private, this email will not display on your public profile.</string>
    <string name="url_label">Personal URL</string>
    <string name="url_disclaimer">You can link a personal blog or website.</string>
    <string name="company_label">Company</string>
    <string name="location_label">Location</string>
    <string name="hireable_text">Available for hire</string>
    <string name="watch_button_text">Watch</string>
    <string name="star_button_text">Star</string>
    <string name="fork_button_text">Fork</string>
    <string name="issues_button_text">Issues</string>
    <string name="default_issue_title">Issue</string>
    <string name="pull_requests_button_text">Pull Requests</string>
    <string name="contributors_button_text">Contributors</string>
    <string name="readme_label_text">README</string>
    <string name="num_stars_text">%1$s stars</string>
    <string name="num_watchers_text">%1$s watchers</string>
    <string name="num_forks_text">%1$s forks</string>
    <string name="num_stars_text_single">1 star</string>
    <string name="num_watchers_text_single">1 watcher</string>
    <string name="num_forks_text_single">1 fork</string>
    <string name="commits_button_text">Commits (%1$d)</string>
    <string name="no_commits_text">There are no commits in this repository.</string>
    <string name="dir_back">..</string>
    <string name="fork_confirm_title">Forking %1$s</string>
    <string name="fork_confirm_message">Are you sure you want to fork this repository?</string>
    <string name="watch_choice_title">Watch %1$s</string>
    <string name="watchers_title">Watchers</string>
    <string name="stargazers_title">Stargazers</string>
    <string name="forks_title">Forks</string>
    <string name="contributions_text_single">1 contribution</string>
    <string name="contributions_text">%1$d contributions</string>
    <string name="lang_breakdown">Language Breakdown</string>
    <string name="feed_date_group">Activity on %1$s</string>
    <string name="commits_date_group">Commits on %1$s</string>
    <string name="committed_date">committed %1$s</string>
    <string name="committed_in">committed in %1$s</string>
    <string name="commits_list_title">Commits</string>
    <string name="empty_repo_text">This repository is empty!</string>
    <string name="pinned_repositories_default">Loading...</string>
    <string name="recent_activity">Recent activity</string>
    <string name="all_activity">All activity</string>
    <string name="empty_all_activity">You don\'t appear to have any events from the users you follow and the repositories you watch.</string>
    <string name="see_more_button_text">See more</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="public_events">Public events</string>
    <string name="notifcations_label">Notifications</string>
    <string name="settings_label">Settings</string>
    <string name="about_label">About</string>
    <string name="logout_label">Sign out</string>
    <string name="logout_confirmation">Are you sure you want to sign out?</string>
    <string name="version_label">GitSpark %1$s build v%2$s</string>
    <string name="public_events_title">Public activity</string>
    <string name="repo_events_title">Repository activity</string>
    <string name="commit_empty_text">There are no commits in this repository.</string>
    <string name="event_empty_text">There were no events found at this time.</string>
    <string name="repo_empty_text">There were no repositories found at this time.</string>
    <string name="user_empty_text">There were no users found at this time.</string>
    <string name="profile_feed_empty_text">There was no recent activity found.</string>
    <string name="repos_empty_text">There were no repositories found.</string>
    <string name="search_title_text">Search for repositories, users, issues, …</string>
    <string name="recent_searches_header">Recent searches</string>
    <string name="recent_searches_text">Your recent searches will appear here.</string>
    <string name="search_bar_hint">Search …</string>
    <string name="search_for_label">Search for</string>
    <string-array name="search_types">
        <item>Repositories</item>
        <item>Users</item>
        <item>Code</item>
        <item>Commits</item>
        <item>Issues</item>
        <item>Pull Requests</item>
    </string-array>
    <string name="advanced_options">Advanced options</string>
    <string name="from_this_user">From this user:</string>
    <string name="from_this_user_hint">Enter a username</string>
    <string name="created_on">Created on:</string>
    <string name="created_on_hint">>YYYY-MM-DD, YYYY-MM-DD</string>
    <string name="language">Language:</string>
    <string name="language_hint">Java, C++, Kotlin, JavaScript</string>
    <string name="num_stars">Number of stars:</string>
    <string name="stars_hint">0..10, >50, 100</string>
    <string name="num_forks">Number of forks:</string>
    <string name="forks_hint">10..50, 200, &lt;10</string>
    <string name="show_forked_repos">Include forks:</string>
    <string name="updated_on">Updated on:</string>
    <string name="updated_on_hint">YYYY-MM-DD, &lt;YYYY-MM-DD</string>
    <string name="clear_button_text">Clear fields</string>
    <string name="clear">Clear</string>
    <string name="search_button_text">Search</string>
    <string name="full_name">Full name:</string>
    <string name="full_name_hint">Joe Smith</string>
    <string name="location">Location:</string>
    <string name="location_hint">Boston, MA</string>
    <string name="num_followers">Number of followers:</string>
    <string name="num_followers_hint">10..50, 200, &lt;10</string>
    <string name="num_repos">Number of repositories:</string>
    <string name="num_repos_hint">0..10, >50, 100</string>
    <string name="file_extension">File extension:</string>
    <string name="file_extension_hint">.py, .java, .kt, .js</string>
    <string name="file_size">File size (KB):</string>
    <string name="file_size_hint">&gt;10, 50..1000, >200</string>
    <string name="commit_message_hint">fixed bug, typo, added change</string>
    <string name="repo">Repository:</string>
    <string name="repository">Repository</string>
    <string name="repo_hint">mingli1/GitSpark</string>
    <string name="state">State:</string>
    <string name="num_comments">Number of comments:</string>
    <string name="num_comments_hint">&gt;10, 50..1000, >200</string>
    <string name="labels">Labels:</string>
    <string name="labels_hint">bug, feature, techdebt</string>
    <string name="repo_search_hint">Repository keywords</string>
    <string name="user_search_hint">Enter a username</string>
    <string name="code_search_hint">Code keywords</string>
    <string name="commit_search_hint">Commit message keywords</string>
    <string name="issues_search_hint">Issue keywords</string>
    <string name="pr_search_hint">Pull request keywords</string>
    <string name="repo_search_result">Repositories found (%1$s)</string>
    <string name="user_search_result">Users found (%1$s)</string>
    <string name="code_search_result">Code found (%1$s)</string>
    <string name="commit_search_result">Commits found (%1$s)</string>
    <string name="issue_search_result">Issues found (%1$s)</string>
    <string name="pr_search_result">Pull Requests found (%1$s)</string>
    <string name="search_date">searched %1$s</string>
    <string name="issue_desc">#%1$d %2$s %3$s by %4$s</string>
    <string name="issue_desc_repo">%1$s #%2$d %3$s %4$s by %5$s</string>
    <string name="sort">Sort by:</string>
    <string-array name="search_order">
        <item>desc</item>
        <item>asc</item>
    </string-array>
    <string-array name="repo_sort">
        <item>best-match</item>
        <item>stars</item>
        <item>forks</item>
        <item>help-wanted-issues</item>
        <item>updated</item>
    </string-array>
    <string-array name="user_sort">
        <item>best-match</item>
        <item>followers</item>
        <item>repositories</item>
        <item>joined</item>
    </string-array>
    <string-array name="commit_sort">
        <item>best-match</item>
        <item>author-date</item>
        <item>committer-date</item>
    </string-array>
    <string-array name="code_sort">
        <item>best-match</item>
        <item>indexed</item>
    </string-array>
    <string-array name="issue_sort">
        <item>best-match</item>
        <item>comments</item>
        <item>reactions</item>
        <item>reactions-+1</item>
        <item>reactions--1</item>
        <item>reactions-smile</item>
        <item>reactions-thinking_face</item>
        <item>reactions-heart</item>
        <item>reactions-tada</item>
        <item>interactions</item>
        <item>created</item>
        <item>updated</item>
    </string-array>
    <string name="comment_edit_hint">Leave a comment</string>
    <string name="cancel">Cancel</string>
    <string name="update_comment">Update comment</string>
    <string name="checks_passed">All checks have passed</string>
    <string name="merge_no_conflicts">This branch has no merge conflicts</string>
    <string name="merge_no_conflicts_desc">Merging can be performed automatically.</string>
    <string name="merge_button_text">Merge pull request</string>
</resources>