<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/home_group"
        android:checkableBehavior="none">

        <item
            android:id="@+id/home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"/>

    </group>

    <group
        android:id="@+id/general_group"
        android:checkableBehavior="none">

        <item
            android:id="@+id/notifications"
            android:title="@string/notifcations_label"
            android:icon="@drawable/ic_notifications"/>

        <item
            android:id="@+id/settings"
            android:title="@string/settings_label"
            android:icon="@drawable/ic_settings"/>

        <item
            android:id="@+id/about"
            android:title="@string/about_label"
            android:icon="@drawable/ic_help"/>

    </group>

    <group
        android:id="@+id/logout_group"
        android:checkableBehavior="none">

        <item
            android:id="@+id/logout"
            android:title="@string/logout_label"
            android:icon="@drawable/ic_logout"/>

    </group>

</menu>