<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/tab_layout_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme">
    
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:title="@string/app_name"
            app:titleTextColor="@color/colorWhite"
            app:layout_scrollFlags="enterAlways|scroll"/>
        
    </com.google.android.material.appbar.AppBarLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        
        <TextView
            android:id="@+id/recent_activity_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/BodyLarge"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/recent_activity"/>
        
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recent_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    
        <TextView
            android:id="@+id/all_activity_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/BodyLarge"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/all_activity"/>
    
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/all_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        
    </LinearLayout>
    
</androidx.coordinatorlayout.widget.CoordinatorLayout>