<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">
    
    <View
        android:id="@+id/top_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorWhiteDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <ImageView
        android:id="@+id/merge_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_merge"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/top_divider"
        app:layout_constraintStart_toStartOf="parent"/>
    
    <TextView
        android:id="@+id/checks_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BodyLarge"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/merge_icon"
        app:layout_constraintStart_toEndOf="@id/merge_icon"
        app:layout_constraintBottom_toTopOf="@id/checks_progress_text"
        tools:text="@string/checks_passed"/>
    
    <TextView
        android:id="@+id/checks_progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BodyLight.Small"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/checks_status_text"
        app:layout_constraintStart_toEndOf="@id/merge_icon"
        app:layout_constraintBottom_toBottomOf="@id/merge_icon"
        tools:text="2 successful checks"/>
    
    <ImageButton
        android:id="@+id/show_checks_button"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_expand_more"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/top_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/second_divider"/>
    
    <View
        android:id="@+id/second_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorWhiteDark"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/merge_icon"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/checks_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/second_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <ImageView
        android:id="@+id/merge_status_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/checks_list"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@drawable/ic_check_circle"
        tools:tint="@color/colorGreen"/>
    
    <TextView
        android:id="@+id/merge_status_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Body"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@+id/merge_status_icon"
        app:layout_constraintStart_toEndOf="@id/merge_status_icon"
        app:layout_constraintBottom_toTopOf="@id/merge_status_desc"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/merge_no_conflicts"/>
    
    <TextView
        android:id="@+id/merge_status_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/BodyLight.Small"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/merge_status_text"
        app:layout_constraintStart_toEndOf="@id/merge_status_icon"
        app:layout_constraintBottom_toBottomOf="@id/merge_status_icon"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/merge_no_conflicts_desc"/>
    
    <View
        android:id="@+id/third_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorWhiteDark"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/merge_status_icon"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <Button
        android:id="@+id/merge_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        style="@style/AppTheme.RoundedCornerMaterialButton.Purple"
        android:text="@string/merge_button_text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/third_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <View
        android:id="@+id/bottom_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorWhiteDark"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/merge_button"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>