<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:background="@color/colorWhite">
    
    <View
        android:id="@+id/top_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorTopicsBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <View
        android:id="@+id/bottom_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorWhiteDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_divider"
        app:layout_constraintBottom_toTopOf="@id/header_divider">
    
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/avatar_card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            app:cardCornerRadius="2dp"
            android:focusable="true"
            android:clickable="true"
            android:background="?attr/actionBarItemBackground"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        
            <ImageView
                android:id="@+id/profile_icon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_person"/>
    
        </com.google.android.material.card.MaterialCardView>
    
        <TextView
            android:id="@+id/author_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BodyBold"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="16dp"
            android:singleLine="true"
            app:layout_constraintStart_toEndOf="@id/avatar_card_view"
            app:layout_constraintTop_toTopOf="@id/avatar_card_view"
            app:layout_constraintBottom_toBottomOf="@id/avatar_card_view"
            tools:text="mingli1"/>
    
        <TextView
            android:id="@+id/author_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/BodyLight"
            android:textColor="@color/colorDarkerGray"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:singleLine="true"
            app:layout_constraintStart_toEndOf="@id/author_username"
            app:layout_constraintTop_toTopOf="@id/avatar_card_view"
            app:layout_constraintEnd_toStartOf="@id/comment_options"
            app:layout_constraintBottom_toBottomOf="@id/avatar_card_view"
            tools:text="commented 35 minutes ago"/>
    
        <ImageButton
            android:id="@+id/comment_options"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_kebab"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        
    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <View
        android:id="@+id/header_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorTopicsBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_bg"/>
    
    <br.tiagohm.markdownview.MarkdownView
        android:id="@+id/comment_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:escapeHtml="false"
        app:layout_constraintTop_toBottomOf="@id/header_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    
    <com.gitspark.gitspark.ui.custom.KeyboardEditText
        android:id="@+id/edit_comment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:layout_margin="12dp"
        android:scrollHorizontally="false"
        android:hint="@string/comment_edit_hint"
        android:inputType="textCapSentences|textMultiLine"
        android:ems="16"
        android:padding="12dp"
        android:maxLines="4"
        android:scrollbars="vertical"
        android:visibility="gone"
        android:selectAllOnFocus="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_divider"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <Button
        android:id="@+id/cancel_edit_button"
        android:layout_width="0dp"
        android:layout_height="44dp"
        style="@style/AppTheme.RoundedCornerMaterialButton.Secondary"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="12dp"
        android:textAllCaps="false"
        android:text="@string/cancel"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/edit_comment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/update_comment_button"
        app:layout_constraintBottom_toBottomOf="parent"/>
    
    <Button
        android:id="@+id/update_comment_button"
        android:layout_width="0dp"
        android:layout_height="44dp"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_marginStart="6dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:textAllCaps="false"
        android:text="@string/update_comment"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/edit_comment"
        app:layout_constraintStart_toEndOf="@id/cancel_edit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>